LLDB: Generate and install Python.zip and shared library file (2)
Amends the Python regex matching on other platforms than MSVC

Change-Id: I7a1f2027bc06f967c99dfee406adee9ec8cbcc0b
Reviewed-by: Cristian Adam <cristian.adam@qt.io>

--- a/lldb/CMakeLists.txt
+++ b/lldb/CMakeLists.txt
@@ -80,9 +80,9 @@ if (LLDB_ENABLE_PYTHON)
     return()
   endif()
 
-  set(PythonRegex "^(.*)/(.*)/(python([0-9]+))${CMAKE_IMPORT_LIBRARY_SUFFIX}$")
+  set(PythonRegex "^(.*)/(.*)/(python([0-9]+))\.[a-z]+$")
   if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-    set(PythonRegex "^(.*)/(.*)/(python([0-9]+)_d)${CMAKE_IMPORT_LIBRARY_SUFFIX}$")
+    set(PythonRegex "^(.*)/(.*)/(python([0-9]+)_d)\.[a-z]+$")
   endif()
 
   foreach(lib IN LISTS Python3_LIBRARIES)
